--- a/laboratorio-modulo1-leccion02-Regex.ipynb
+++ b/laboratorio-modulo1-leccion02-Regex.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        " 'Bad Romance']"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        " [' 4:54 2009']]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        " 'Bad Romance 4:54 2009']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
        "  'Cancion': 'Bad Romance'}]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
     "    lanzamiento[titulos[i]] =sol[0]\n",
     "    i+=1\n",
     "\n",
-    "cancion_lanzamiento = dict(sorted(duraciones.items(), key=lambda item: item[1], reverse=True))\n",
+    "cancion_lanzamiento = dict(sorted(lanzamiento.items(), key=lambda item: item[1], reverse=True))\n",
     "\n",
     "print(f'La canción más actual es {list(cancion_lanzamiento.keys())[0]} lanzada el año {list(cancion_lanzamiento.values())[0]}')"
    ]
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "envpruebas",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
